--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-demo",
   "author": "Tom Clarkson",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "scripts": {
     "test": "eslint . && mocha --compilers js:babel-core/register"
   },
@@ -30,7 +30,7 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "chai": "^3.5.0",
-    "codedeploy-scripts": ">=0.0.7",
+    "codedeploy-scripts": "^1.0.0",
     "eslint": "^3.0.0",
     "eslint-config-tqc": "^1.0.9",
     "eslint-plugin-react": "^6.4.1",
